--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
 						appearance: revert;"
                 required
               >
-                <option value="249">&nbsp; أريد عبوة (249 درهم)</option>
-                <option value="375">&nbsp; أريد علبتين (375 درهم)</option>
+                <option value="249">&nbsp; أريد  واحدة (249 درهم)</option>
+                <option value="375">&nbsp; أريد إثنان (375 درهم)</option>
               </select>
             </div>
 
